--- a/about.html
+++ b/about.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<section id="about" class="section">
+<section id="generic" class="section">
 	<div class="container">
-		<div class="columns">
-			<div class="column">
+		<div class="columns is-centered">
+			<div class="column is-two-thirds-tablet">
 				<div class="content">
 					<h1>About</h1>
-					<p>This is some placeholder content.</p>
+						<p class="is-size-5-tablet">Preserve This Podcast! is an <a target="_blank" href="https://mellon.org/">Andrew W. Mellon</a> grant-funded project hosted by the <a target="_blank" href="https://metro.org/">Metropolitan New York Library Council</a> (METRO) to help podcasters protect their work against the threats of digital decay. The project began in January 2018 and is funded through January 2020.</p>
+						<p class="is-size-5-tablet">The Preserve This Podcast team is producing a zine workbook and a 5-part podcast series, as well as a series of traveling workshops. The project is co-led by three archivists who love to listen to podcasts, and want to make sure future generations can love listening just as much: Molly Schwartz (METRO), Mary Kidd (New York Public Library), and Dana Gerber-Margie (University of Wisconsin-Madison). There is a whole team of people making this project possible. Sarah Nguyen is our Project Coordinator. Jeremy Helton is our Community Relations Manager. Allison Behringer is our Editorial Consultant. Dalton Harts is our Composer and Audio Engineer. Jacob Kramer-Duffield is our Analytics and Audience Research Consultant. Noah Litvin is our Web Designer. Austin Eustice designed our logo and artwork.</p>
 				</div>
 			</div>
 		</div>
