--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
 			<div class="columns is-centered is-vcentered">
 				<div class="column is-fullwidth has-text-centered">
 					<h2>
-						Think like an archivist.
+						Keep your podcast talking
 						<br />
-						Preserve your podcast.
+						For all who are listening
 					</h2>
 				</div>
 			</div>
@@ -24,9 +24,24 @@ layout: default
 	</a>
 </section>
 
-<section id="episodes" class="section" name="episodes">
+<section id="survey" class="section">
+	<div class="columns is-centered">
+		<div class="column is-half">
+			<div class="box has-text-centered">
+				<div class="content">
+					<h2>HELP: tell us about your podcast production</h2>
+					<a href="{{ site.data.content.survey_link }}" class="button is-primary is-large">Take our survey</a>
+					<small class="is-block">Only takes 3 minutes!</small>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+{% if site.data.content.episodes %}
+<section id="episodes" class="section" name="podcast">
 	<div class="container">
-		<h2>Our podcast explains four easy steps to archive your work.</h2>
+		<h2>LISTEN: how &amp; why to preserve your podcast</h2>
 		{% for episode in site.data.content.episodes %}
 
 {% if episode.transcript_file %}
@@ -84,6 +99,7 @@ layout: default
 	</div>
 	<div id="player-container"></div>
 </section>
+{% endif %}
 <div class="modal" id="subscribe">
 	<div class="modal-background"></div>
 	<div class="modal-content">
@@ -117,15 +133,20 @@ layout: default
 <section id="zine" class="section" name="zine">
 		<div class="columns is-centered">
 			<div class="column is-half-widescreen">
+				{% if site.data.content.zine_link %}
 				<a class="preview" href="{{ site.data.content.zine_link }}">
 					<img src="{{base}}/assets/images/zine.png" alt="Preserve Your Podcast Zine">
 				</a>
+				{% endif %}
 				<div class="box">
 					<div class="content">
-					<h2 class="is-inline-block">The Zine</h2>
-					<p><strong>We recommend you print out the zine and follow along as you listen to the podcast.</strong></p>
-					<p>Here are a few sentences that describe the zine and make you want to read it. Here are a few sentences that describe the zine and make you want to read it. Here are a few sentences that describe the zine.</p>
-					<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless">Read It</a>
+					<h2 class="is-inline-block">READ: the zine &amp; workbook</h2>
+					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute.</p>
+					{% if site.data.content.zine_link %}
+						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless">Read It</a>
+					{% else %}
+						<button disabled class="button is-large is-marginless">Coming soon</button>
+					{% endif %}
 					</div>
 				</div>
 			</div>
@@ -137,8 +158,8 @@ layout: default
 		<div class="column is-half-desktop">
 			<div class="box">
 				<div class="content">
-					<h2 class="is-inline-block">Attend a Workshop</h2>
-					<p>Here's some copy introducting the workshops that describes their value and gets visitors excited about attending!</p>
+					<h2 class="is-inline-block">ATTEND: workshops &amp; conferences</h2>
+					<p>We want to meet you! The three archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <a href="mailto:podcast@metro.org">podcast@metro.org</a> if you're interested in hosting a workshop.</p>
 				</div>
 
 				{% for event in site.data.content.events %}
@@ -157,20 +178,6 @@ layout: default
 				</div>
 				{% endfor %}
 
-			</div>
-		</div>
-	</div>
-</section>
-
-<section id="survey" class="section">
-	<div class="columns is-centered">
-		<div class="column is-half">
-			<div class="box has-text-centered">
-				<div class="content">
-					<h2>Help us learn more about your podcast’s production!</h2>
-					<a href="{{ site.data.content.survey_link }}" class="button is-primary is-large">Take our survey</a>
-					<small class="is-block">It will only take three minutes!</small>
-				</div>
 			</div>
 		</div>
 	</div>
