--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ layout: default
 			<div class="column is-half-widescreen">
 				{% if site.data.content.zine_link %}
 				<a class="preview" href="{{ site.data.content.zine_link }}">
-					<img src="{{base}}/assets/images/zine.png" alt="Preserve Your Podcast Zine">
+					<img src="{{base}}/assets/images/zineCover.png" alt="Preserve Your Podcast Zine">
 				</a>
 				{% endif %}
 				<div class="box">
