set Take Our Survey link to new tab

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 			<div class="box has-text-centered">
 				<div class="content">
 					<h2>HELP: tell us about your podcast production</h2>
-					<a href="{{ site.data.content.survey_link }}" class="button is-primary is-large">Take our survey</a>
+					<a href="{{ site.data.content.survey_link }} target="_blank" class="button is-primary is-large">Take our survey</a>
 					<small class="is-block">Only takes 3 minutes!</small>
 				</div>
 			</div>
