--- a/adventure.html
+++ b/adventure.html
@@ -9,7 +9,7 @@ layout: default
 
 <center>
 
-<a href="start.html"><img src="/assets/cover.png"></a>
+<a href="start.html"><img src="/assets/images/cover.png"></a>
 
 </center>
 
