--- a/start.html
+++ b/start.html
@@ -3,11 +3,11 @@
 <body>
 
 <center>
-<img src="intro-title.png"><br>
-<img src="divider.png"><br>
-<img src="intro-body-top.png"><br>
-<a href="http://preservethispodcast.org/"><img src="intro-body-bottom.png"></a><br>
-<a href="coffee_spill.html"><img src="button-start.png"></a><br>
+<img src="/assets/images/intro-title.png"><br>
+<img src="/assets/images/divider.png"><br>
+<img src="/assets/images/intro-body-top.png"><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/intro-body-bottom.png"></a><br>
+<a href="coffee_spill.html"><img src="/assets/images/button-start.png"></a><br>
 </center>
 
 </body>
