update img directory path

--- a/seattle.html
+++ b/seattle.html
@@ -3,11 +3,11 @@
 <body>
 
 <center>
-<img src="seattle-animation.gif"><br>
-<img src="seattle-body.png"><br>
-<img src="the_actual_end.png"><br>
-<img src="but_not_really.png"><br>
-<a href="coffee_spill.html"><img src="start_over.png"></a>
+<img src="/assets/images/seattle-animation.gif"><br>
+<img src="/assets/images/seattle-body.png"><br>
+<img src="/assets/images/the_actual_end.png"><br>
+<img src="/assets/images/but_not_really.png"><br>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
 </center>
 
 </body>
