--- a/mailed_your_own.html
+++ b/mailed_your_own.html
@@ -3,10 +3,10 @@
 <body>
 
 <center>
-<img src="cloud-animation.gif"><br>
-<img src="the_cloud-body.png"><br>
-<a href="mailed_your_own.html"><img src="button-has_backup.png"></a><br>
-<a href="hard_drive_die-2.html"><img src="button-no_backup.png"></a>
+<img src="/assets/images/cloud-animation.gif"><br>
+<img src="/assets/images/the_cloud-body.png"><br>
+<a href="mailed_your_own.html"><img src="/assets/images/button-has_backup.png"></a><br>
+<a href="hard_drive_die-2.html"><img src="/assets/images/button-no_backup.png"></a>
 </center>
 
 </body>
