update img directory path

--- a/harddrive_die.html
+++ b/harddrive_die.html
@@ -3,10 +3,10 @@
 <body>
 
 <center>
-<img src="harddrive-animation.gif"><br>
-<img src="harddrive_die-body.png"><br>
-<a href="cloud.html"><img src="button-has_backup.png"></a><br>
-<a href="harddrive-no_backup.html"><img src="button-no_backup.png"></a>
+<img src="/assets/images/harddrive-animation.gif"><br>
+<img src="/assets/images/harddrive_die-body.png"><br>
+<a href="cloud.html"><img src="/assets/images/button-has_backup.png"></a><br>
+<a href="harddrive-no_backup.html"><img src="/assets/images/button-no_backup.png"></a>
 </center>
 
 </body>
