--- a/harddrive-no_backup.html
+++ b/harddrive-no_backup.html
@@ -3,11 +3,11 @@
 <body>
 
 <center>
-<img src="rip_hdd.png"><br>
-<img src="harddrive_no_backup.png"><br>
-<img src="the_end.png"><br>
-<a href="http://preservethispodcast.org/"><img src="but_not_really.png"></a><br>
-<a href="coffee_spill.html"><img src="start_over.png"></a>
+<img src="/assets/images/rip_hdd.png"><br>
+<img src="/assets/images/harddrive_no_backup.png"><br>
+<img src="/assets/images/the_end.png"><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"></a><br>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
 
 </center>
 
