update img directory path

--- a/coffee_spill.html
+++ b/coffee_spill.html
@@ -4,13 +4,13 @@
 
 <center>
 
-<img src="window-animation.gif"><br>
+<img src="/assets/images/window-animation.gif"><br>
 
-<img src="coffee_spill-body.png"><br>
+<img src="/assets/images/coffee_spill-body.png"><br>
 
-<a href="harddrive_die.html"><img src="button-has_backup.png"></a><br>
+<a href="harddrive_die.html"><img src="/assets/images/button-has_backup.png"></a><br>
 
-<a href="coffee_spill-no_backup.html"><img src="button-no_backup.png"></a>
+<a href="coffee_spill-no_backup.html"><img src="/assets/images/button-no_backup.png"></a>
 
 </center>
 
