--- a/coffee_spill-no_backup.html
+++ b/coffee_spill-no_backup.html
@@ -3,11 +3,11 @@
 <body>
 
 <center>
-<img src="coffee_spill-animation.gif"><br>
-<img src="coffee_spill-body-no_backup-body.png"><br>
-<img src="the_end.png"><br>
-<a href="http://preservethispodcast.org/"><img src="but_not_really.png"></a><br>
-<a href="coffee_spill.html"><img src="start_over.png"></a>
+<img src="/assets/images/coffee_spill-animation.gif"><br>
+<img src="/assets/images/coffee_spill-body-no_backup-body.png"><br>
+<img src="/assets/images/the_end.png"><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"></a><br>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
 </center>
 
 </body>
