update img directory path

--- a/cloud.html
+++ b/cloud.html
@@ -4,15 +4,15 @@
 
 <center>
 
-<img src="server_farm.png"><br>
+<img src="/assets/images/server_farm.png"><br>
 
-<img src="the_cloud-body.png"><br>
+<img src="/assets/images/the_cloud-body.png"><br>
 
-<img src="divider.png"><br>
+<img src="/assets/images/divider.png"><br>
 
-<a href="seattle.html"><img src="button-has_backup.png"></a><br>
+<a href="seattle.html"><img src="/assets/images/button-has_backup.png"></a><br>
 
-<a href="cloud-no_backup.html"><img src="button-no_backup.png"></a>
+<a href="cloud-no_backup.html"><img src="/assets/images/button-no_backup.png"></a>
 
 </center>
 
