--- a/cloud-no_backup.html
+++ b/cloud-no_backup.html
@@ -4,15 +4,15 @@
 
 <center>
 
-<img src="cloud-animation.gif"><br>
+<img src="/assets/images/cloud-animation.gif"><br>
 
-<img src="the_cloud-no_backup.png"><br>
+<img src="/assets/images/the_cloud-no_backup.png"><br>
 
-<img src="the_end.png"><br>
+<img src="/assets/images/the_end.png"><br>
 
-<a href="http://preservethispodcast.org/"><img src="but_not_really.png"></a><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"></a><br>
 
-<a href="coffee_spill.html"><img src="start_over.png"></a>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
 
 </center>
 
