--- a/seattle.html
+++ b/seattle.html
@@ -6,7 +6,7 @@
 <img src="/assets/images/seattle-animation.gif"><br>
 <img src="/assets/images/seattle-body.png"><br>
 <img src="/assets/images/the_actual_end.png"><br>
-<img src="/assets/images/but_not_really.png"><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"><br>
 <a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
 </center>
 
