--- a/adventure.html
+++ b/adventure.html
@@ -8,7 +8,7 @@ layout: default
 
 <center>
 
-<a href="start.html"><img src="/assets/images/cover.png"></a>
+<a href="/adventure/start.html"><img src="/assets/images/cover.png"></a>
 
 </center>
 
