update line 179 for all caps header

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ layout: default
 				</div>
 				{% endfor %}
 <div class="content">
-  <h3 class="has-text-white">Past Events</h3>
+  <h3 class="has-text-white">PAST EVENTS</h3>
 </div>
 {% for event in site.data.content.past_events %}
 <div class="event">
