--- a/404tba.html
+++ b/404tba.html
@@ -1,2 +1,2 @@
 <h3>Sorry, this is still in the works. More to come soon! </h3></p>
-In the meantime, take a listen to these <a href="https://pca.st/xt5c">Forgotten Sounds</a> from BBC Radio's Slow Radio.
+In the meantime, take a listen to these <a href="https://pca.st/xt5c">Forgotten Sounds</a> from BBC Radio's Slow Radio or check out <a href="https://twitter.com/preservethispod?lang=en">our podcast + preservation tweets</a>.
