figure tag and alt text

--- a/adventure.html
+++ b/adventure.html
@@ -2,14 +2,15 @@
 layout: default
 ---
 
-<html>
+<html lang=”en-us”>
 <head></head>
 <body>
 
 <center>
-
-<a href="/adventure/start.html"><img src="/assets/images/cover.png"></a>
-
+<figure>
+<a href="/adventure/start.html"><img src="/assets/images/cover.png" alt="Preserve This Podcast 'Store, Backup, Or Lose' choose-your-own-adventure game cover page. You're the star of the story! Choose your podcast's fate! Click to the cover to start the game."></a>
+  <figcaption>Click on the cover image to start the choose-your-own-adventure game</figcaption>
+</figure>
 </center>
 
 </body>
