--- a/adventure/coffee_spill.html
+++ b/adventure/coffee_spill.html
@@ -1,16 +1,16 @@
-<html>
+<html lang=”en-us”>
 <head></head>
 <body>
 
 <center>
 
-<img src="/assets/images/window-animation.gif"><br>
+<img src="/assets/images/window-animation.gif" alt="illustration gif of a window pane looking out to a dark and stormy night"><br>
 
-<img src="/assets/images/coffee_spill-body.png"><br>
+<img src="/assets/images/coffee_spill-body.png" alt="'Tis a sweltering, dark and stormy summer evening in July. You are a hardworking indie podcaster, coming up on a deadline, editing furiously on your laptop. You work a day job: evenings and weekends are the only time yo uhave to work on your show. A cup of coffee is definitely in order. You walk to the kitchen and prepare 16 ounces of hot, caffeine-infused, liquid life. You walk the cup over to your desk, and as you are setting it down, are jolted by the sound of a very close bolt of lightning! Startled, you drop your cup. Coffee spills everywehere. All over you. All over the floor. All over your laptop."><br>
 
-<a href="harddrive_die.html"><img src="/assets/images/button-has_backup.png"></a><br>
+<a href="harddrive_die.html"><img src="/assets/images/button-has_backup.png" alt="Happy face. To see what happens if you have a backup plan in place, click here."></a><br>
 
-<a href="coffee_spill-no_backup.html"><img src="/assets/images/button-no_backup.png"></a>
+<a href="coffee_spill-no_backup.html"><img src="/assets/images/button-no_backup.png" alt="Otherwise, click here to see what happens to you without a backup plan in place!"></a>
 
 </center>
 
