--- a/adventure/seattle.html
+++ b/adventure/seattle.html
@@ -1,13 +1,13 @@
-<html>
+<html lang=”en-us”>
 <head></head>
 <body>
 
 <center>
-<img src="/assets/images/seattle-animation.gif"><br>
-<img src="/assets/images/seattle-body.png"><br>
-<img src="/assets/images/the_actual_end.png"><br>
-<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"><br>
-<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
+<img src="/assets/images/seattle-animation.gif" alt="Illustration of sun shining down onto two pine trees wearing sunglasses with a bottle of sunscreen SPF 100 nearby"><br>
+<img src="/assets/images/seattle-body.png" alt="You've been quite unlucky in a number of ways today. Yet, now, you realize how very lucky you are, indeed: just yesterday you mailed a copy of your hard drive to your best bud in Seattle. You check the weather in Seattle. Sunny with a 0% chance of a rogue lightning. Sunny and warm, in the rainy Pacific Northwest! another stroke of luck! Thankfully, you had a backup to your backup, to your backup!"><br>
+<img src="/assets/images/the_actual_end.png" alt="The actual End (of this excercise).><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png" alt="But not really. Click here to visit preservethispodcast.org for tips on safeguarding your podcast files!"><br>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a>
 </center>
 
 </body>
