--- a/adventure/coffee_spill-no_backup.html
+++ b/adventure/coffee_spill-no_backup.html
@@ -1,13 +1,13 @@
-<html>
+<html lang=”en-us”>
 <head></head>
 <body>
 
 <center>
-<img src="/assets/images/coffee_spill-animation.gif"><br>
-<img src="/assets/images/coffee_spill-body-no_backup-body.png"><br>
-<img src="/assets/images/the_end.png"><br>
-<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"></a><br>
-<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
+<img src="/assets/images/coffee_spill-animation.gif" alt="Illustrated animation gif of a laptop opened up to an important_and_unique.wav file with a coffee cup spilling all over the laptop's keyboard"><br>
+<img src="/assets/images/coffee_spill-body-no_backup-body.png" alt="The coffee-soaked laptop makes a strange sputtering noise: a sound you will forever associate with a creative-legacy, lost."><br>
+<img src="/assets/images/the_end.png" alt="The End"><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png" alt="But not really. Click here to visit preservethispodcast.org for tips on safeguarding your podcast files!"></a><br>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a>
 </center>
 
 </body>
