add alt text. missing source hyperlink?

--- a/adventure/harddrive-no_backup.html
+++ b/adventure/harddrive-no_backup.html
@@ -1,13 +1,13 @@
-<html>
+<html lang="en-us">
 <head></head>
 <body>
 
 <center>
-<img src="/assets/images/rip_hdd.png"><br>
-<img src="/assets/images/harddrive_no_backup.png"><br>
-<img src="/assets/images/the_end.png"><br>
-<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png"></a><br>
-<a href="coffee_spill.html"><img src="/assets/images/start_over.png"></a>
+<img src="/assets/images/rip_hdd.png" alt="Illustration of tombstone surrounded by grass bits, engraved with 'RIP HDD 2010-2015 No Guarentees"><br>
+<img src="/assets/images/harddrive_no_backup.png" alt=" 'This can't be! How could fate be so cruel!' you lament. 'Isn't this a 'Seagate'?! Doesn't this suggest this hard drive was capable of so much more?' Apparently not!"><br>
+<img src="/assets/images/the_end.png" alt="The End"><br>
+<a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png" alt="But not really. Click here to visit preservethispodcast.org for tips on safeguarding your podcast files!"></a><br>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a>
 
 </center>
 
