--- a/adventure/harddrive_die.html
+++ b/adventure/harddrive_die.html
@@ -5,8 +5,11 @@
 <center>
 <img src="/assets/images/harddrive-animation.gif" alt="Illustration animated gif of an external hard drive with usb cable, identifying everything inside the drive"><br>
 <img src="/assets/images/harddrive_die-body.png" alt="To your relief, you reealize that your backup drive situated safely on the opposite end of your desk, was spared the laptop's boiling fate! 'Thank the stars for my data sync!' you say to yourself, as you sop up excess liquid with a towel. Your roommate has a desktop computer you can work on. Upon plugging in your backup drive into the USB port, you hear a faint, rhythmic clicking sound. Your hard drive emits one last mechanized sigh. And dies."><br>
-<a href="cloud.html"><img src="/assets/images/button-has_backup.png" alt="Smiley face. To see what happens if you have a backup plan in place, click here.></a><br>
-<a href="harddrive-no_backup.html"><img src="/assets/images/button-no_backup.png" alt="Sad face. Otherwise, click here to see what happens to you without a backup plan in place!"></a>
+<a href="cloud.html">
+  <img src="/assets/images/button-has_backup.png" alt="Smiley face. To see what happens if you have a backup plan in place, click here."></a><br>
+<a href="harddrive-no_backup.html">
+  <img src="/assets/images/button-no_backup.png" alt="Sad face. Otherwise, click here to see what happens to you without a backup plan in place!">
+  </a>
 </center>
 
 </body>
