rearrange survey closed text

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ layout: default
 		<div class="column is-half">
 			<div class="box has-text-centered">
 				<div class="content">
-					<h2>Survey results out podcasters' preservation practices to be shared openly + freely soon!</h2>
-					<a href="{{ site.data.content.survey_link }}" target="_blank" class="button is-primary is-large">Survey Closed</a>
-					<!-- small class="is-block">Only takes 3 minutes!</small> -->
+					<h2>Survey Closed</h2>
+					<!-- hide until next survey call-to-action --> <!-- <a href="{{ site.data.content.survey_link }}" target="_blank" class="button is-primary is-large">Take the Survey</a> -->
+					small class="is-block">Survey results about podcasters' preservation practices to be shared openly + freely soon!</small>
 				</div>
 			</div>
 		</div>
