--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 				<div class="content">
 					<h2>Survey Closed</h2>
 					<!-- hide until next survey call-to-action --> <!-- <a href="{{ site.data.content.survey_link }}" target="_blank" class="button is-primary is-large">Take the Survey</a> -->
-					small class="is-block">Survey results about podcasters' preservation practices to be shared openly + freely soon!</small>
+					<small class="is-block">Survey results about podcasters' preservation practices to be shared openly + freely soon!</small>
 				</div>
 			</div>
 		</div>
