--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ layout: default
 			<div class="box has-text-centered">
 				<div class="content">
 					<h2>Survey Closed</h2>
-					<a href="{{ site.data.content.survey_link }}" target="_blank" class="button is-primary is-large">Results/data coming soon</a>
-					<small class="is-block">Survey results about podcasters' preservation practices to be shared openly + freely soon!</small>
+					<a href="{{ site.data.content.survey_link }}" target="_blank" class="button is-primary is-large">Data coming soon</a>
+					<small class="is-block">Survey results about podcasters' preservation practices will be shared openly + freely soon!</small>
 				</div>
 			</div>
 		</div>
