update zine download button

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ layout: default
 					{% if site.data.content.zine_link %}
 						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless">Read It</a>
 					{% else %}
-						<button disabled class="button is-large is-marginless">Coming soon</button>
+						<button disabled class="button is-large is-marginless">Read Online</button>
 					{% endif %}
 					</div>
 				</div>
