--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ layout: default
 					<h2 class="is-inline-block">READ: the zine &amp; workbook</h2>
 					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute.</p>
 					{% if site.data.content.zine_link %}
-						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless">Read It</a>
+						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless" target="_blank">Read Online</a>
 					{% else %}
 						<button disabled class="button is-large is-marginless">Read Online</button>
 					{% endif %}
