add print + read button

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ layout: default
 					{% else %}
 						<button disabled class="button is-large is-marginless">Read Online</button>
 					{% endif %}
+					<a href="{{ site.data.content.zinePrint_link }}" class="button is-primary is-large is-marginless" target="_blank">Print + Read</a>
 					</div>
 				</div>
 			</div>
