--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ layout: default
 					{% else %}
 						<button disabled class="button is-large is-marginless">Read Online</button>
 					{% endif %}
-					&nbsp; &nbsp; <a href="{{ site.data.content.zinePrint_link }}" class="button is-primary is-large is-marginless" target="_blank">Print + Read</a>
+					&nbsp; &nbsp; <a href="{{ site.data.content.zinePrint_link }}" class="button is-primary is-large is-marginless" target="_blank">Print &amp; Read</a>
 					</div>
 				</div>
 			</div>
