add caption text

--- a/adventure/start.html
+++ b/adventure/start.html
@@ -3,11 +3,14 @@
 <body>
 
 <center>
+  <figure>
 <img src="/assets/images/intro-title.png" alt="Introduction title: Beware and Warning!"><br>
 <img src="/assets/images/divider.png" alt="horizontal line to divide sections"><br>
 <img src="/assets/images/intro-body-top.png" alt="This web page is different. You and you alone are in charge of what happens in this story. There are dangers, choices, and consequences to not having a backup plan. No back up plan (or a backup plan to your backup plan) could end in a disaster--even death (of your hard drive). But don't despair. You can set up a 3-2-1 backup plan, which can help prevent catastrophic loss of your creative work."><br>
 <a href="http://preservethispodcast.org/"><img src="/assets/images/intro-body-bottom.png" alt="Unsure of what a 3-2-1 backup plan is? Visit preservethispodcast.org!"></a><br>
 <a href="coffee_spill.html"><img src="/assets/images/button-start.png" alt="Click here to START"></a><br>
+  <figcaption>Beware and Warning! This web page is different. You and you alone are in charge of what happens in this story. There are dangers, choices, and consequences to not having a backup plan. No back up plan (or a backup plan to your backup plan) could end in a disaster--even death (of your hard drive). But don't despair. You can set up a 3-2-1 backup plan, which can help prevent catastrophic loss of your creative work. Click START to begin the backup plan journey</figcaption>
+  </figure>
 </center>
 
 </body>
