add caption text

--- a/adventure/mailed_your_own.html
+++ b/adventure/mailed_your_own.html
@@ -3,10 +3,14 @@
 <body>
 
 <center>
+  <figure>
 <img src="/assets/images/cloud-animation.gif" alt="Illustrated animation gif of a cloud in the sky, wearing sunglasses, holidng a cell phone texting 'Sup? U there? Hey! U got my stuff?' "><br>
 <img src="/assets/images/the_cloud-body.png" alt="'Mercury must be in retrograde or something,' you think to yourself as you log into your cloud storage account. Thankfully, your files are sitting on a server farm somewhere. As you are downloading the files you need to work on, another terrible bolt of lightning strikes, causing your apartment's lights to flicker. Your download resumes, except now you are noticing little error messages popping up. 'Rejected by server,' the little pop-up dialogue claims."><br>
 <a href="mailed_your_own.html"><img src="/assets/images/button-has_backup.png" alt="Smiley face. To see what happens if you have a backup plan in place, click here."></a><br>
-<a href="hard_drive_die-2.html"><img src="/assets/images/button-no_backup.png" alt="Otherwise, click here to see what happens to you without a backup plan in place!"></a>
+<a href="hard_drive_die-2.html"><img src="/assets/images/button-no_backup.png" alt="Sade face. Otherwise, click here to see what happens to you without a backup plan in place!"></a>
+    </p>
+  <figcaption>Plaintext: Mercury must be in retrograde or something,' you think to yourself as you log into your cloud storage account. Thankfully, your files are sitting on a server farm somewhere. As you are downloading the files you need to work on, another terrible bolt of lightning strikes, causing your apartment's lights to flicker. Your download resumes, except now you are noticing little error messages popping up. 'Rejected by server,' the little pop-up dialogue claims. Click on the smiley face if you have a backup plan in place. Click on the sad face if you don't have a backup plan.</figcaption>
+  </figure>
 </center>
 
 </body>
