update caption text

--- a/adventure/harddrive_die.html
+++ b/adventure/harddrive_die.html
@@ -11,7 +11,7 @@
 <a href="harddrive-no_backup.html">
   <img src="/assets/images/button-no_backup.png" alt="Sad face. Otherwise, click here to see what happens to you without a backup plan in place!">
     </a></p>
-  <figcaption>To your relief, you reealize that your backup drive situated safely on the opposite end of your desk, was spared the laptop's boiling fate! 'Thank the stars for my data sync!' you say to yourself, as you sop up excess liquid with a towel. Your roommate has a desktop computer you can work on. Upon plugging in your backup drive into the USB port, you hear a faint, rhythmic clicking sound. Your hard drive emits one last mechanized sigh. And dies. Click on the smiley face if you have a backup plan in place. Click on the sad face if you don't have a backup plan.</figcaption>
+  <figcaption>Plaintext: To your relief, you reealize that your backup drive situated safely on the opposite end of your desk, was spared the laptop's boiling fate! 'Thank the stars for my data sync!' you say to yourself, as you sop up excess liquid with a towel. Your roommate has a desktop computer you can work on. Upon plugging in your backup drive into the USB port, you hear a faint, rhythmic clicking sound. Your hard drive emits one last mechanized sigh. And dies. Click on the smiley face if you have a backup plan in place. Click on the sad face if you don't have a backup plan.</figcaption>
   </figure>
 </center>
 
