add caption text

--- a/adventure/coffee_spill-no_backup.html
+++ b/adventure/coffee_spill-no_backup.html
@@ -3,11 +3,14 @@
 <body>
 
 <center>
+  <figure>
 <img src="/assets/images/coffee_spill-animation.gif" alt="Illustrated animation gif of a laptop opened up to an important_and_unique.wav file with a coffee cup spilling all over the laptop's keyboard"><br>
 <img src="/assets/images/coffee_spill-body-no_backup-body.png" alt="The coffee-soaked laptop makes a strange sputtering noise: a sound you will forever associate with a creative-legacy, lost."><br>
 <img src="/assets/images/the_end.png" alt="The End"><br>
 <a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png" alt="But not really. Click here to visit preservethispodcast.org for tips on safeguarding your podcast files!"></a><br>
-<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a></p>
+  <figcaption>Plaintext: The coffee-soaked laptop makes a strange sputtering noise: a sound you will forever associate with a creative-legacy, lost. The End. But not really! Click on the rewind arrow to try again.</figcaption>
+  </figure>
 </center>
 
 </body>
