--- a/adventure/cloud-no_backup.html
+++ b/adventure/cloud-no_backup.html
@@ -12,7 +12,7 @@
 
 <a href="http://preservethispodcast.org/"><img src="/assets/images/but_not_really.png" alt="But not really. Click here to visit preservethispodcast.org for tips on safeguarding your podcast files!"></a><br>
 
-<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a>
+<a href="coffee_spill.html"><img src="/assets/images/start_over.png" alt="Click here on the rewind arrows to start over"></a></p>
   <figcaption>Plaintext:You check your phone for advice on the error, and come across a recent news article with the byline: Cloud server farm struck by lightning! Mass data casualties expected! The End, but not really. Click on the rewind arrows to start over.</figcaption>
   </figure>
 </center>
