update layout and format

--- a/press.html
+++ b/press.html
@@ -1,8 +1,20 @@
-<p>Please contact <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> for press inquiries.</p>
+---
+layout: default
+---
 
+<section id="generic" class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-two-thirds-tablet">
+				<div class="content">
+					<h1>Press Room</h1>
+						<p class="is-size-5-tablet">Please contact <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> for press inquiries.</p>
+
+    <p class="is-size-5-tablet">
 <em>February 14, 2018</em> &nbsp; <a href="https://web.archive.org/web/20190122200741/https://medium.com/the-bytegeist-blog/preserve-this-podcast-ae8e93ac83ae">Preserve This Podcast! A new grant-funded project will help podcasters make sure their work doesn’t disappear</a></p>
 
 <em>February 14, 2018</em> &nbsp; <a href="https://bellocollective.com/preserve-this-podcast-3c652571ecd1">Preserve this Podcast!
 A two-year grant to teach podcast preservation</a></p>
 
 <em>February 27, 2018</em> &nbsp; <a href="https://bellocollective.com/preserve-this-podcast-3c652571ecd1">Podcast publishers, start preserving your stuff. (This podcast will tell you how.)</a></p>
+      </p>
