--- a/press.html
+++ b/press.html
@@ -14,7 +14,7 @@ layout: default
  	<p><strong>February 14, 2018</strong> &nbsp; <a href="https://bellocollective.com/preserve-this-podcast-3c652571ecd1">Preserve this Podcast!
 A two-year grant to teach podcast preservation</a>
 	</p>
- 	<p><strong>February 27, 2018</strong> &nbsp; <a href="https://bellocollective.com/preserve-this-podcast-3c652571ecd1">Podcast publishers, start preserving your stuff. (This podcast will tell you how.)</a>
+ 	<p><strong>February 27, 2018</strong> &nbsp; <a href="https://hotpodnews.com/podcast-publishers-start-preserving-your-stuff-this-podcast-will-tell-you-how/">Podcast publishers, start preserving your stuff. (This podcast will tell you how.)</a>
 	</p>
 	</div>
 		</div>
