--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ layout: default
 			<div class="box">
 				<div class="content">
 					<h2 class="is-inline-block">ATTEND: workshops &amp; conferences</h2>
-					<p>We want to meet you! The three archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <a href="mailto:podcast@metro.org">podcast@metro.org</a> if you're interested in hosting a workshop.</p>
+					<p>We want to meet you! The three archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> if you're interested in hosting a workshop.</p>
 				</div>
 
 				{% for event in site.data.content.events %}
