--- a/404tba.html
+++ b/404tba.html
@@ -1,2 +1,11 @@
-<h3>Sorry, this is still in the works. More to come soon! </h3></p>
+---
+layout: default
+---
+
+<section id="generic" class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-two-thirds-tablet">
+				<div class="content">
+					<h1>Sorry, this is still in the works. More to come soon!</h></p>
 In the meantime, take a listen to these <a href="https://pca.st/xt5c">Forgotten Sounds</a> from BBC Radio's Slow Radio or check out <a href="https://twitter.com/preservethispod?lang=en">our podcast + preservation tweets</a>.
