--- a/404tba.html
+++ b/404tba.html
@@ -7,9 +7,11 @@ layout: default
 		<div class="columns is-centered">
 			<div class="column is-two-thirds-tablet">
 				<div class="content">
-					<h1>Sorry, this is still in the works. More to come soon!</h></p>
-			</div>
+					<h1>Sorry, this is still in the works. More to come soon!</h1></p>
+			
+In the meantime, take a listen to these <a href="https://pca.st/xt5c">Forgotten Sounds</a> from BBC Radio's Slow Radio or check out <a href="https://twitter.com/preservethispod?lang=en">our podcast + preservation tweets</a>.
+
+				</div>
 		</div>
 	</div>
-</section></p>
-In the meantime, take a listen to these <a href="https://pca.st/xt5c">Forgotten Sounds</a> from BBC Radio's Slow Radio or check out <a href="https://twitter.com/preservethispod?lang=en">our podcast + preservation tweets</a>.
+</section>
