survey data download

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ layout: default
 		<div class="column is-half">
 			<div class="box has-text-centered">
 				<div class="content">
-					<h2>Survey Closed</h2>
-					<a href="{{ site.data.content.survey_link }}" target="_blank" class="button is-primary is-large">Data coming soon</a>
-					<small class="is-block">Survey results about podcasters' preservation practices will be shared openly + freely soon!</small>
+					<h2>Survey Data & Results</h2>
+					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large"Podcast Preservation Survey Findings</a>
+					<small class="is-block">Graphs & charts about podcasters' preservation practices are open &  available</small>
 				</div>
 			</div>
 		</div>
