--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 			<div class="box has-text-centered">
 				<div class="content">
 					<h2>Survey Data & Results</h2>
-					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large"Podcast Preservation Survey Findings</a>
+					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large">Podcast Preservation Survey Findings</a>
 					<small class="is-block">Graphs & charts about podcasters' preservation practices are open &  available</small>
 				</div>
 			</div>
