target="_blank" for episode download

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
 
 			</div>
 			<div class="column is-narrow">
-					<a href="{{ episode.download_link }}" data-embed-link="{{ episode.embed_link }}" class="button is-primary is-large player-button">
+					<a href="{{ episode.download_link }}" data-embed-link="{{ episode.embed_link }}" class="button is-primary is-large player-button" target="_blank">
 						<span class="icon">
 						  <i class="fas fa-play"></i>
 						</span>&nbsp;
