--- a/_redirects/podcastrss.html
+++ b/_redirects/podcastrss.html
@@ -1,5 +1,5 @@
 ---
-permalink: http://preservethispodcast.org/podcast.rss
+permalink: /podcast.rss
 destination: https://rss.simplecast.com/podcasts/10324/rss
 canonical: false
 sitemap: false
