try other layout redirect
https://superdevresources.com/redirects-jekyll-github-pages/

--- a/_redirects/podcastrss.html
+++ b/_redirects/podcastrss.html
@@ -1,5 +1,6 @@
 ---
+layout: redirect
+sitemap: false
 permalink: /podcast.rss/
-destination: https://rss.simplecast.com/podcasts/10324/rss/
-canonical: false
+redirect_to:  https://rss.simplecast.com/podcasts/10324/rss/
 ---
