--- a/_redirects/podcastrss.html
+++ b/_redirects/podcastrss.html
@@ -2,5 +2,5 @@
 layout: redirect
 sitemap: false
 permalink: /podcast.rss/
-redirect_to:  https://rss.simplecast.com/podcasts/10324/rss/
+redirect_to:  https://rss.simplecast.com/podcasts/10324/rss
 ---
