--- a/_redirects/podcastrss.html
+++ b/_redirects/podcastrss.html
@@ -1,5 +1,5 @@
 ---
-layout: redirect
+layout: redirected
 sitemap: false
 permalink: /podcast.rss/
 redirect_to:  https://rss.simplecast.com/podcasts/10324/rss
