--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ layout: default
 				<div class="box">
 					<div class="content">
 					<h2 class="is-inline-block">READ: the zine &amp; workbook</h2>
-					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute.</p>
+					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute. </br>
+            <a href="/zineJr_PreserveThisPodcastWorkshop.pdf" target="blank">Zine Jr. (the mini-workbook from our workshop)</a> is also available to print front and back of one page. Simple <a href="/zineJr-instructions.html">cut-and-fold instruction here.</a></p>
 					{% if site.data.content.zine_link %}
 						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless" target="_blank">Read Online</a>
 					{% else %}
@@ -156,7 +157,7 @@ layout: default
 			<div class="box">
 				<div class="content">
 					<h2 class="is-inline-block">ATTEND: workshops &amp; conferences</h2>
-					<p>We want to meet you! The three archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> if you're interested in hosting a workshop.</p>
+					<p>We want to meet you! The archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> if you're interested in hosting a workshop.</p>
 				</div>
 
 				{% for event in site.data.content.events %}
