--- a/zineJr-instructions.html
+++ b/zineJr-instructions.html
@@ -1,11 +1,15 @@
-    
+
 ---
 layout: default
 ---
 
 <html lang="en-us">
-<head></head>
-<body>
+
+<section id="generic" class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-two-thirds-tablet">
+				<div class="content">
 
 <h3>Zine Jr. Instructions</h3>
 <p>Zine Jr., a mini-workbook, created so that you can write field notes and dreams sparked from the activities prompted in <a href="{{ site.data.content.zine_link }}">the Zine</a> and <a href="/#podcast">the podcast</a>. </p>
@@ -13,16 +17,18 @@ layout: default
 For best results, <a href="/zineJr_PreserveThisPodcastWorkshop.pdf" target="blank">print Zine Jr.</a> on one 8/5" x 11" page, front and back. Then follow these instructions on how to cut and fold into a booklet:</p>
 
 <ul>
-<li> Fold the paper in half, long way, like a celery or hot dog. It's best to fold both ways to make the spine flexible.</li>
-<li> Open the paper and fold it in half, the shorter way, like a tomato or hamburger.</li>
-<li> Re-open the paper and fold the along the dotted lines so that the shorter edges meet in the middle. The page should be creased to make eight rectangular sections.</li>
-<li> Cut along the dotted lines between the two middle rectangles, above the "Exercise 01" and "My Next Steps" boxes.</li>
-<li> Fold the zine so that the hamburger image side is on the inside and edge that was cut open meets in the middle like a plus sign.</li>
+  <li> Fold the paper in half, long way, like a celery or hot dog. It's best to fold both ways to make the spine flexible.</li>
+  <li> Open the paper and fold it in half, the shorter way, like a tomato or hamburger.</li>
+  <li> Re-open the paper and fold the along the dotted lines so that the shorter edges meet in the middle. The page should be creased to make eight rectangular sections.</li>
+  <li> Cut along the dotted lines between the two middle rectangles, above the "Exercise 01" and "My Next Steps" boxes.</li>
+  <li> Fold the zine so that the hamburger image side is on the inside and edge that was cut open meets in the middle like a plus sign.</li>
 </ul>
 
 <figure>
-<img src="/assets/images/zineJr_instructions_photos.png" alt="Photos on how to fold and cut Zine Jr. to become a mini-workbook for notes and activity writings."></a>
+  <img src="/assets/images/zineJr_instructions_photos.png" alt="Photos on how to fold and cut Zine Jr. to become a mini-workbook for notes and activity writings."></a>
 </figure>
-
-</body>
+</div>
+</div>
+</div>
+</section>
 </html>
