--- a/zineJr-instructions.html
+++ b/zineJr-instructions.html
@@ -13,13 +13,13 @@ layout: default
 
 For best results, <a href="/assets/zineJr_PreserveThisPodcastWorkshop.pdf" target="blank">print Zine Jr.</a> on one 8/5" x 11" page, front and back. Then follow these instructions on how to cut and fold into a booklet:</p>
 
-<ul>
-  <ol> Fold the paper in half, long way, like a celery or hot dog. It's best to fold both ways to make the spine flexible.</ol>
-  <ol> Open the paper and fold it in half, the shorter way, like a tomato or hamburger.</ol>
-  <ol> Re-open the paper and fold the along the dotted lines so that the shorter edges meet in the middle. The page should be creased to make eight rectangular sections.</ol>
-  <ol> Cut along the dotted lines between the two middle rectangles, above the "Exercise 01" and "My Next Steps" boxes.</ol>
-  <ol>Fold the zine so that the hamburger image side is on the inside and edge that was cut open meets in the middle like a plus sign.</ol>
-</ul>
+<ol>
+  <li> Fold the paper in half, long way, like a celery or hot dog. It's best to fold both ways to make the spine flexible.</li>
+  <li> Open the paper and fold it in half, the shorter way, like a tomato or hamburger.</li>
+  <li> Re-open the paper and fold the along the dotted lines so that the shorter edges meet in the middle. The page should be creased to make eight rectangular sections.</li>
+  <li> Cut along the dotted lines between the two middle rectangles, above the "Exercise 01" and "My Next Steps" boxes.</li>
+  <li>Fold the zine so that the hamburger image side is on the inside and edge that was cut open meets in the middle like a plus sign.</li>
+</ol>
 
 <figure>
   <img src="/assets/images/zineJr_instructions_photos.png" alt="Photos on how to fold and cut Zine Jr. to become a mini-workbook for notes and activity writings."></a>
