--- a/zineJr-instructions.html
+++ b/zineJr-instructions.html
@@ -15,10 +15,10 @@ For best results, <a href="/assets/ZineJr_PreserveThisPodcastWorkshop_frontback.
 
 <ol>
   <li> Fold the paper in half, long way, like a celery or hot dog. It's best to fold both ways to make the spine flexible.</li>
-  <li> Open the paper and fold it in half, the shorter way, like a tomato or hamburger.</li>
+  <li> Open the paper and fold it in half, the shorter way, like a tomato or burger patty.</li>
   <li> Re-open the paper and fold the along the dotted lines so that the shorter edges meet in the middle. The page should be creased to make eight rectangular sections.</li>
   <li> Cut along the dotted lines between the two middle rectangles, above the "Exercise 01" and "My Next Steps" boxes.</li>
-  <li>Fold the zine so that the hamburger image side is on the inside and edge that was cut open meets in the middle like a plus sign.</li>
+  <li>Fold the zine so that the burger image side is on the inside and the edge that was cut open meets in the middle like a plus sign.</li>
 </ol>
 
 <figure>
