add inside podcasting article 3/18

--- a/press.html
+++ b/press.html
@@ -30,6 +30,9 @@ layout: default
 							<strong>March 21, 2019</strong> &nbsp; <a href="https://mailchi.mp/fa01f4ea402d/podcasting-puerto-rico?e=cc91922d6d" target="_blank">Google Podcasts CP abre una nueva convocatoria</a> -- Podcaster@s <a class="preview" href="https://web.archive.org/web/20190418203032/https://mailchi.mp/fa01f4ea402d/podcasting-puerto-rico?e=cc91922d6d" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Internet Archive logo" width="20" height="20"></a>
 						</p>
 						<p>
+							<strong>March 18, 2019</strong> &nbsp; <a href="https://inside.com/campaigns/inside-podcasting-2019-03-18-12641?token=upnqbUGPpB6RdUq5BnBLAA" target="_blank">[Inside Podcasting] newsletter</a> -- Inside Podcasting <a class="preview" href="https://web.archive.org/web/20190418203738/https://inside.com/campaigns/inside-podcasting-2019-03-18-12641?token=upnqbUGPpB6RdUq5BnBLAA" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Internet Archive logo" width="20" height="20"></a>
+						</p>
+						<p>
 							<strong>March 15, 2019</strong> &nbsp; <a href="http://www.insideradio.com/podcastnewsdaily/non-profit-aims-to-help-preserve-podcast-history-with-help/article_91fded84-473f-11e9-b0c5-ffab90d78e59.html" target="_blank">Non-Profit Aims To Help Preserve Podcast History, With Help From A Podcast.</a> -- Inside Radio <a class="preview" href="https://web.archive.org/web/20190409210617/http://www.insideradio.com/podcastnewsdaily/non-profit-aims-to-help-preserve-podcast-history-with-help/article_91fded84-473f-11e9-b0c5-ffab90d78e59.html" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Internet Archive logo" width="20" height="20"></a>
 						</p>
 						<p>
